# AI-Coding

./: .gitignore  README.md
EinMalEinsTrainer-Android/: .project  gradle.properties  local.properties  settings.gradle
EinMalEinsTrainer-Android/android/.tmp/: configuration-cache-report11664213752815171395.html  configuration-cache-report3299648036175118241.html  gradle_download10596324052003675440bin  gradle_download11163491274550147969bin  gradle_download11745875743216427221bin  gradle_download11873363014158718083bin  gradle_download13296237224157766563bin  gradle_download14573300311254404434bin  gradle_download15553188478179175005bin  gradle_download1614096577481606972bin  gradle_download2157066588675320509bin  gradle_download4065342336239150781bin  gradle_download4495030159468020595bin  gradle_download6467328861950155377bin  gradle_download6599123121852274317bin  gradle_download7176704179083161401bin  gradle_download7549800497702056931bin  problems-report8432046264731860717.html
EinMalEinsTrainer-Android/android/kotlin-profile/: 9c68aa12-e9cd-4975-a16a-c31a34e83d13.profile  a452c4bf-977b-4bb6-9b75-c9ed7ab0ac0a.profile
EinMalEinsTrainer-Android/app/: .project  build.gradle
EinMalEinsTrainer-Linux/: CMakeLists.txt
EinMalEinsTrainer-Linux/src/: ConfigManager.cpp  ConfigManager.h  Constants.h  GUI.cpp  GUI.h  Trainer.cpp  Trainer.h  main.cpp
EinMalEinsTrainer-Python/: config_manager.py  constants.py  gui.py  main.py  trainer.py
EinMalEinsTrainer-Python/tests/: __init__.py  test_config_manager.py  test_trainer.py
(+40 files in other folders)
